--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -179,7 +179,7 @@
                         {% comment %}
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'instructor_sessions' %}" aria-expanded="false">
+                            <a class="sidebar-link" href="{% url 'administrator_sessions' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-article"></i>
                                 </span>
@@ -188,7 +188,7 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'instructor_assignments' %}" aria-expanded="false">
+                            <a class="sidebar-link" href="{% url 'administrator_assignments' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-copy"></i>
                                 </span>
@@ -200,7 +200,7 @@
 
                         <li class="sidebar-item">
                             <a class="sidebar-link {% block problem_active %} {% endblock %}"
-                                href="{% url 'instructor_problems' %}" aria-expanded="false">
+                                href="{% url 'administrator_problems' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-file-database"></i>
                                 </span>
@@ -210,7 +210,7 @@
 
                         <li class="sidebar-item">
                             <a class="sidebar-link {% block pod_active %} {% endblock %}"
-                                href="{% url 'instructor_pod' %}" aria-expanded="false">
+                                href="{% url 'administrator_pod' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-campfire"></i>
                                 </span>
@@ -220,7 +220,7 @@
 
                         <li class="sidebar-item">
                             <a class="sidebar-link {% block sheet_active %} {% endblock %}"
-                                href="{% url 'instructor_sheets' %}" aria-expanded="false">
+                                href="{% url 'administrator_sheets' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-clipboard"></i>
                                 </span>
@@ -238,7 +238,7 @@
 
                         <li class="sidebar-item">
                             <a class="sidebar-link {% block my_batches_active %} {% endblock %}"
-                                href="{% url 'instructor_batches' %}" aria-expanded="false">
+                                href="{% url 'administrator_batches' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-server"></i>
                                 </span>
@@ -249,7 +249,7 @@
 
                         <li class="sidebar-item">
                             <a class="sidebar-link {% block enrollment_request_active %} {% endblock %}"
-                                href="{% url 'instructor_enrollment_requests' %}" aria-expanded="false">
+                                href="{% url 'administrator_enrollment_requests' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-user"></i>
                                 </span>
@@ -276,7 +276,7 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'instructor_feedbacks' %}" aria-expanded="false">
+                            <a class="sidebar-link" href="{% url 'administrator_feedbacks' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-list"></i>
                                 </span>
@@ -314,7 +314,7 @@
 
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'instructor_notifications' %}" aria-expanded="false">
+                            <a class="sidebar-link" href="{% url 'administrator_notifications' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-alert-circle"></i>
                                 </span>
@@ -323,7 +323,7 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'instructor_anonymous_message' %}"
+                            <a class="sidebar-link" href="{% url 'administrator_anonymous_message' %}"
                                 aria-expanded="false">
                                 <span>
                                     <i class="ti ti-message"></i>
@@ -333,7 +333,7 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'instructor_profile' %}" aria-expanded="false">
+                            <a class="sidebar-link" href="{% url 'administrator_profile' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-user"></i>
                                 </span>
@@ -360,7 +360,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-icon-hover" href="{% url 'instructor_notifications' %}">
+                            <a class="nav-link nav-icon-hover" href="{% url 'administrator_notifications' %}">
                                 <i class="ti ti-bell-ringing"></i>
                                 <!-- <div class="notification bg-primary rounded-circle"></div> -->
                             </a>
@@ -382,12 +382,12 @@
                                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up"
                                     aria-labelledby="drop2">
                                     <div class="message-body">
-                                        <a href="{% url 'instructor_profile' %}"
+                                        <a href="{% url 'administrator_profile' %}"
                                             class="d-flex align-items-center gap-2 dropdown-item">
                                             <i class="ti ti-user fs-6"></i>
                                             <p class="mb-0 fs-3">My Profile</p>
                                         </a>
-                                        <a href="{% url 'edit_instructor_profile' %}"
+                                        <a href="{% url 'edit_administrator_profile' %}"
                                             class="d-flex align-items-center gap-2 dropdown-item">
                                             <i class="ti ti-mail fs-6"></i>
                                             <p class="mb-0 fs-3">Edit Profile</p>
