--- a/templates/administration/batch/set_pod.html
+++ b/templates/administration/batch/set_pod.html
@@ -78,7 +78,7 @@ active
                             <button type="submit" class="btn btn-primary w-100">Set POD</button>
                         </form>
 
-                        <a href="{% url 'instructor_batch' batch.slug %}" class="btn btn-secondary mt-3">Back to
+                        <a href="{% url 'administrator_batch' batch.slug %}" class="btn btn-secondary mt-3">Back to
                             Batches</a>
 
                     </div>
@@ -202,7 +202,7 @@ active
 
                                     <td class="border-bottom-0">
                                         <div class="d-flex align-items-center gap-2">
-                                            <a href="{% url 'instructor_view_submissions' pod.question.slug %}"
+                                            <a href="{% url 'administrator_view_submissions' pod.question.slug %}"
                                                 class="btn btn-outline-info text-blue float-end">View Submissions </a>
                                         </div>
                                     </td>
@@ -331,7 +331,7 @@ active
 
                                     <td class="border-bottom-0">
                                         <div class="d-flex align-items-center gap-2">
-                                            <a href="{% url 'instructor_view_submissions' pod.question.slug %}"
+                                            <a href="{% url 'administrator_view_submissions' pod.question.slug %}"
                                                 class="btn btn-outline-info text-blue float-end">View Submissions </a>
                                         </div>
                                     </td>
