--- a/templates/administration/index.html
+++ b/templates/administration/index.html
@@ -391,10 +391,10 @@ Administration -> Home
                                     <a href="{% url 'set_pod' %}" class="btn btn-outline-secondary">Set General POD</a>
                                 </td>
                                 <td class="border-bottom-0">
-                                    <a href="{% url 'instructor_add_sheet' %}" class="btn btn-outline-warning">Add Sheet</a>
+                                    <a href="{% url 'administrator_add_sheet' %}" class="btn btn-outline-warning">Add Sheet</a>
                                 </td>
                                 <td class="border-bottom-0">
-                                    <a href="{% url 'instructor_sheet' latest_sheet.slug %}" class="btn btn-outline-info">Open {{ latest_sheet.name }} Sheet</a>
+                                    <a href="{% url 'administrator_sheet' latest_sheet.slug %}" class="btn btn-outline-info">Open {{ latest_sheet.name }} Sheet</a>
                                 </td>
                                 <td class="border-bottom-0">
                                     <a href="{% url 'question_requests' %}" class="btn btn-outline-indigo">Question Requests</a>
