--- a/templates/administration/sheet/add_new_question.html
+++ b/templates/administration/sheet/add_new_question.html
@@ -24,7 +24,7 @@ active
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item pe-auto">
-                <a href="{% url 'instructor_sheet' sheet.slug %}">{{ sheet.name }}</a>
+                <a href="{% url 'administrator_sheet' sheet.slug %}">{{ sheet.name }}</a>
             </li>
 
             </li>
