--- a/templates/administration/sheet/reorder.html
+++ b/templates/administration/sheet/reorder.html
@@ -27,8 +27,8 @@ Reorder {{ sheet.name }}
 
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item pe-auto"><a href="{% url 'instructor_sheets' %}">Sheets</a></li>
-            <li class="breadcrumb-item pe-auto"><a href="{% url 'instructor_sheet' sheet.slug %}">{{ sheet.name }}</a></li>
+            <li class="breadcrumb-item pe-auto"><a href="{% url 'administrator_sheets' %}">Sheets</a></li>
+            <li class="breadcrumb-item pe-auto"><a href="{% url 'administrator_sheet' sheet.slug %}">{{ sheet.name }}</a></li>
 
             </li>
             <li class="breadcrumb-item active" aria-current="page">Reorder</li>
