--- a/templates/administration/practice/driver_code.html
+++ b/templates/administration/practice/driver_code.html
@@ -68,7 +68,7 @@ Driver Code | {{ question.title }}
 
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item pe-auto"><a href="{% url 'instructor_problems' %}">Question Set</a></li>
+            <li class="breadcrumb-item pe-auto"><a href="{% url 'administrator_problems' %}">Question Set</a></li>
             <li class="breadcrumb-item pe-auto">{{ question.title }}</li>
 
             </li>
