--- a/templates/administration/practice/test_code.html
+++ b/templates/administration/practice/test_code.html
@@ -181,7 +181,7 @@ Test Code | {{ question.title }}
 
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item pe-auto"><a href="{% url 'instructor_problems' %}">Question Set</a></li>
+            <li class="breadcrumb-item pe-auto"><a href="{% url 'administrator_problems' %}">Question Set</a></li>
             <li class="breadcrumb-item pe-auto">{{ question.title }}</li>
 
             </li>
@@ -571,7 +571,7 @@ Test Code | {{ question.title }}
 
         const formData = new FormData(this);
 
-        fetch("{% url 'instructor_submit_code' question.slug %}", {
+        fetch("{% url 'administrator_submit_code' question.slug %}", {
             method: 'POST',
             body: formData,
         })
