--- a/templates/administration/sheet/sheet.html
+++ b/templates/administration/sheet/sheet.html
@@ -27,13 +27,13 @@ active
                     <i class="ti ti-plus"></i>
                 </button>
 
-                <a href="{% url 'instructor_reorder' sheet.slug %}" class="btn btn-outline-primary">⬆️</a>
+                <a href="{% url 'administrator_reorder' sheet.slug %}" class="btn btn-outline-primary">⬆️</a>
 
                 <button class="btn btn-outline-primary" type="button" data-bs-toggle="modal"
                     data-bs-target="#setTimerModal">⏰</button>
 
 
-                <a href="{% url 'instructor_add_new_question' sheet.slug %}" class="btn btn-outline-primary">Add New Question</a>
+                <a href="{% url 'administrator_add_new_question' sheet.slug %}" class="btn btn-outline-primary">Add New Question</a>
 
                 <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,19 +42,19 @@ active
 
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                     <li>
-                        <a href="{% url 'instructor_leaderboard' sheet.slug %}"
+                        <a href="{% url 'administrator_leaderboard' sheet.slug %}"
                             class="btn btn-warning button w-100">Leaderboard
                         </a>
                     </li>
 
                     <li>
-                        <a href="{% url 'instructor_delete_sheet' sheet.id %}" class="btn btn-danger button w-100 mt-1"
+                        <a href="{% url 'administrator_delete_sheet' sheet.id %}" class="btn btn-danger button w-100 mt-1"
                             onclick="return confirm('Pakka delete krna h soch le ek baar or!!!');">Delete Sheet
                         </a>
                     </li>
 
                     <li>
-                        <a href="{% url 'instructor_edit_sheet' sheet.slug %}" class="btn btn-primary button w-100 mt-1">Edit Sheet
+                        <a href="{% url 'administrator_edit_sheet' sheet.slug %}" class="btn btn-primary button w-100 mt-1">Edit Sheet
                         </a>
                     </li>
 
@@ -218,7 +218,7 @@ active
 
                             <td class="border-bottom-0">
                                 <div class="d-flex align-items-center gap-2">
-                                    <a href="{% url 'instructor_view_submissions' question.slug %}"
+                                    <a href="{% url 'administrator_view_submissions' question.slug %}"
                                         class="btn btn-outline-info text-blue float-end">Submissions
                                         ({{question.how_many_users_solved }}) </a>
                                 </div>
@@ -235,7 +235,7 @@ active
                             <td class="border-bottom-0">
                                 <div class="d-flex align-items-center gap-2">
 
-                                    <!-- <a href="{% url 'instructor_remove_from_sheet' sheet.id question.id %}" -->
+                                    <!-- <a href="{% url 'administrator_remove_from_sheet' sheet.id question.id %}" -->
                                     <a href="{% url 'delete_question' question.id %}"
                                         class="float-end"
                                         onclick="return confirm('Pakka delete krna h soch le ek baar or!!!');">❌</a>
@@ -399,7 +399,7 @@ active
         }
 
         // Send AJAX request to update the timer
-        fetch("{% url 'instructor_set_sheet_timer' sheet.id %}", {
+        fetch("{% url 'administrator_set_sheet_timer' sheet.id %}", {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
