--- a/templates/instructor/profile/edit_instructor_profile.html
+++ b/templates/instructor/profile/edit_instructor_profile.html
@@ -1,4 +1,4 @@
-{% extends 'administration/base.html' %}
+{% extends 'instructor/base.html' %}
 {% load static %}
 
 {% block title %}
@@ -43,7 +43,7 @@
                     <!-- Profile picture card-->
                     <div class="card mb-4 mb-xl-0">
 
-                        <form action="{% url 'upload_instructor_profile' %}" method="post" enctype="multipart/form-data">
+                        <form action="{% url 'upload_administrator_profile' %}" method="post" enctype="multipart/form-data">
 
                             {% csrf_token %}
 
